; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_mgmtShell.spec.c_mgmtProcessCfgMnodeMsg.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_mgmtShell.spec.c_mgmtProcessCfgMnodeMsg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@TSDB_MSG_TYPE_CFG_MNODE_RSP = common dso_local global i32 0, align 4
@TSDB_CODE_OPS_NOT_SUPPORT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mgmtProcessCfgMnodeMsg(i8* %0, i32 %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %6, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @TSDB_MSG_TYPE_CFG_MNODE_RSP, align 4
  %11 = load i32, i32* @TSDB_CODE_OPS_NOT_SUPPORT, align 4
  %12 = call i32 @taosSendSimpleRsp(i32 %9, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @taosSendSimpleRsp(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
